# veil

./: .gitignore  Cargo.toml  README.txt
docs/: api-reference.txt  architecture.txt  integration-guide.txt
example/: Dockerfile  docker-compose.yml  package.json  server.js
example/data/: veil.db
example/public/: index.html
src/: audit.rs  constants.rs  crypto.rs  envelope.rs  group.rs  key_directory.rs  keys.rs  lib.rs  storage.rs  stream.rs  test_utils.rs  webcrypto_shim.rs
src/client/: audit.rs  direct.rs  group.rs  http.rs  identity.rs  mod.rs  stream.rs
tests/: audit.rs  end_to_end.rs  group_envelope.rs  group_stream.rs
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: index.ts  types.ts
